--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- <div class = 'outer_con'> -->
+		<div class = 'first_con'>
+			<div class = 'final_con'>
+				<p>
+					This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+				</p>
+			</div>
+		</div>
+	<!-- </div> -->
     <script type="text/javascript" src="./script.js">
 </script>
 
